--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html data-theme="light" >
+<html data-theme="light" lang="fr">
 <head>
   <meta charset="utf-8">
   <title>The Light Projekt</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="index, follow" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://js.stripe.com/v3/"></script>
 </head>
