--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
   <meta name="robots" content="index, follow" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://js.stripe.com/v3/"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PWSHMJZQHL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PWSHMJZQHL');
+  </script>
 </head>
 <body>
   <app-root></app-root>
